@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor SYSTEM_COLOR
skinparam classBackgroundColor SYSTEM_COLOR

Package Ui {
class MainWindow
class CaloriesGraph
}

Package Logic {
class LogicManager
class ExerciseModel
class ExerciseBook
class UniqueExerciseList
}

MainWindow *----> CaloriesGraph
MainWindow -> LogicManager
LogicManager *--> ExerciseModel
ExerciseModel *--> ExerciseBook
ExerciseBook *--> UniqueExerciseList
@enduml
